try to fix the continued issue where masthead is disappearing on safari, and a blank bar shows up on firefox

--- a/form.css
+++ b/form.css
@@ -4,7 +4,7 @@
     color: var(--gry2);
 }
 
-.contact-form{
+.contactform{
     color: var(--red0);
     display: flex;
 }
